--- a/demo/index.html
+++ b/demo/index.html
@@ -12,17 +12,26 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Input demo</title>
+    <title>dw-form and dw-form-field demo</title>
     <script type="module" src="./dw-form-demo.js"></script>
+    <script type="module" src="./dw-form-field-demo.js"></script>
 
     <style>
       body {
         margin: 24px;
       }
+
+      dw-form-field-demo{
+        margin-bottom: 24px;
+      }
     </style>
   </head>
 
   <body>
+    <h1>Form field element demo</h1>
+    <dw-form-field-demo></dw-form-field-demo>
+
+    <h1>Form demo</h1>
     <dw-form-demo></dw-form-demo>
   </body>
 </html>
