feat: development of dw-composite-form-element

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <title>dw-form and dw-form-field demo</title>
     <script type="module" src="./dw-form-demo.js"></script>
     <script type="module" src="./dw-form-field-demo.js"></script>
-
+    <script type="module" src="./dw-composite-form-element-demo.js"></script>
     <style>
       body {
         margin: 24px;
@@ -33,5 +33,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <h1>Form demo</h1>
     <dw-form-demo></dw-form-demo>
+
+    <h1>Form composite element</h1>
+    <dw-composite-form-element-demo></dw-composite-form-element-demo>
   </body>
 </html>
