fix: update form-field new prop label and alignEnd

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,9 +13,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <head>
     <meta charset="utf-8">
     <title>dw-form and dw-form-field demo</title>
-    <script type="module" src="./dw-form-demo.js"></script>
+    <!-- <script type="module" src="./dw-form-demo.js"></script> -->
     <script type="module" src="./dw-form-field-demo.js"></script>
-    <script type="module" src="./dw-composite-form-element-demo.js"></script>
+    <!-- <script type="module" src="./dw-composite-form-element-demo.js"></script> -->
     <style>
       body {
         margin: 24px;
